+ added info window with logs [WiZaRd]
~ kMule will now try different settings if the default shared usage setting fails to create all necessary folders [WiZaRd]
! fixed problem with race conditions on startup which could cause kMule not to connect when using the first start wizard [WiZaRd]
+ added NAT-T support - original by David Xanatos [WiZaRd]
+ added the eD2k LinkCreator to the Tools menu [Tuxman]
~ added temporary DownThemAll! downloads to known partial files [Tuxman]
+ automatic priorities are more flexible now and also set VERYLOW and VERYHIGH states [WiZaRd]
+ added extendedXS support - original by David Xanatos [WiZaRd]
+ added basic IPv6 support - original by David Xanatos [WiZaRd]
+ added "About kMule" page to options with information and donation possibility [WiZaRd]
+ Feature request: added additional CA icons, depending on the CA status/score [WiZaRd]
 * angry pirate: very bad
 * black skull: bad (score < 0.5)
 * closed treasure chest: unknown (score < 1.3)
 * open treasure chest: good (score < 3.0)
 * happy pirate: very good
- removed SOCKS4(a) proxy support, no one uses them [Tuxman]
~ changed references in mdump from "eMule" to "kMule" [WiZaRd]
+ added "waiting" user column to shared files window [WiZaRd]
+ make UPnP work on interfaces with secondary IPs - original by Netfinity [WiZaRd]
+ added file health display to shared files window [WiZaRd]
~ replaced "Shared" title with "Indexed" in shared files window because it describes the information of the column way better [WiZaRd]
~ improved CA information in client details
+ added complete part count to file details [WiZaRd]
+ added anti-hashset probe code - original by Enig123 [WiZaRd]
+ added support for peerblock cache.p2b format - orignal by ElKarro [WiZaRd]
! fixed crash on ip-filter update if blocked nodes are currently in use [WiZaRd]
~ part files are shared ASAP, now [WiZaRd]
~ new kMule try icons [WiZaRd]