@@ -117,6 +117,9 @@ Version history
 #include "stdafx.h"
 #include "AsyncProxySocketLayer.h"
 #include "CBase64coding.hpp"
+//>>> Tux::ProxyStatus
+#include "updownclient.h"
+//<<< Tux::ProxyStatus
 
 #ifdef _DEBUG
 #define new DEBUG_NEW
@@ -848,6 +851,10 @@ void CAsyncProxySocketLayer::OnConnect(int nErrorCode)
         return;
     }
 
+//>>> Tux::ProxyStatus
+     m_bWeAreProxified = false;
+//<<< Tux::ProxyStatus
+
     if (nErrorCode)
     {
         // Can't connect to proxy
@@ -1123,6 +1130,10 @@ void CAsyncProxySocketLayer::OnConnect(int nErrorCode)
         else
             ASSERT(0);
 
+//>>> Tux::ProxyStatus
+        m_bWeAreProxified = true;
+//<<< Tux::ProxyStatus
+
         //Now we'll wait for the response, handled in OnReceive
         m_nProxyOpState++;
     }
@@ -1223,6 +1234,9 @@ int CAsyncProxySocketLayer::GetProxyType() const
 
 void CAsyncProxySocketLayer::Close()
 {
+//>>> Tux::ProxyStatus
+     m_bWeAreProxified = false;
+//<<< Tux::ProxyStatus
     m_ProxyData.strProxyHost.Empty();
     m_ProxyData.strProxyUser.Empty();
     m_ProxyData.strProxyPass.Empty();
