@@ -91,6 +91,7 @@
 #include "UPnPImplWrapper.h"
 #include <dbt.h>
 #include "XMessageBox.h"
+#include "updownclient.h" //>>> Tux::ProxyStatus
 #include "./Mod/autoUpdate.h" //>>> WiZaRd::AutoUpdate
 #include "./Mod/extractfile.h" //>>> WiZaRd::MediaInfoDLL Update
 #include "./Mod/CustomSearches.h" //>>> WiZaRd::CustomSearches
@@ -1010,6 +1011,10 @@ CString CemuleDlg::GetConnectionStateString()
         status = GetResString(IDS_CONNECTING);
     else
         status = GetResString(IDS_NOTCONNECTED);
+//>>> Tux::ProxyStatus
+    if (m_bWeAreProxified)
+        status += " (Proxy)";
+//<<< Tux::ProxyStatus
     return status;
 }
 
